@@ -1,3 +1,9 @@
+2008-09-30  Tor Lillqvist  <tml@novell.com>
+
+	* glocalfile.c (get_volume_for_path) [Win32]: Avoid a
+	g_critical(). Pass a large enough result buffer to
+	GetVolumePathNameW(). Just use MAX_PATH.
+
 2008-09-29  David Zeuthen  <davidz@redhat.com>
 
 	* gvolume.c: Clarify semantics of g_volume_mount_finish() (#552168)
